move libraries into src folder, compile with npx webpack'

--- a/templates/race.html
+++ b/templates/race.html
@@ -24,6 +24,6 @@
         const ourUsername = "{{ current_user.username }}";
         const lobby_id = {{ lobby_id }};
     </script>
-    <script type='module' src="/static/js/race_main.js"></script>
+    <script type='module' src="/static/dist/js/race.js"></script>
 </body>
 </html>
